frontend/src/Components/Home/RecentArticles/RecentArticleItem/RecentArticleItem.scss
@import "bootstrap/scss/bootstrap-grid.scss";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/variables";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/functions";
@import "../../../../scss/variables";

// recent article parent container
.recent-article-container {
  //   width: 500px;
  display: flex;
  //   min-width: 300px;

  @media (min-width: 300px) {
    flex-direction: column;
    gap: 20px;
    width: 200px;
  }

  @media (min-width: 375px) {
    flex-direction: column;
    width: 350px;
  }

  @media (min-width: 425px) and (max-width: 700px) {
    flex-direction: column;
    width: 20em;
  }

  @media (min-width: 760px) {
    flex-direction: row;
    gap: 40px;
    width: 700px;
  }

  @media (min-width: 990px) {
    width: 350px;
  }

  @media (min-width: 1400px) {
    width: 900px;
  }
}

.recent-article-image-container {
  width: fit-content;
  height: 100%;
  position: relative;
  display: flex;
  align-items: flex-start;
}

// recent article image
.recent-article-img {
  position: relative;
  object-fit: contain;
  object-position: center top;
  width: 90vw;
  height: 100%;

  @media (min-width: 760px) {
    width: 300px;
  }

  @media (min-width: 1400px) {
    width: 400px;
  }
}

//bookmark
.recent-article-bookmark {
  position: absolute;
  transform: rotate(-90deg);
  top: 10px;
  right: -10px;
  width: fit-content;
  height: 20px;

  &:hover {
    cursor: pointer;
  }
  &:active {
    top: 12px;
    cursor: auto;
  }
}

// recent article title
.recent-article-title {
  text-decoration: none;
  width: 450px;
  font-weight: 600;
  min-width: 300px;

  @media (min-width: 300px) {
    width: 300px;
    font-size: 1.3em;
  }

  @media (min-width: 375px) {
    width: 350px;
  }

  @media (min-width: 400px) {
    width: 400px;
  }

  @media (min-width: 990px) {
    font-size: 1.4em;
    width: 330px;
  }

  @media (min-width: 1400px) {
    font-size: 1.8em;
    width: 500px;
  }

  @media (min-width: 1900px) {
    font-size: 2.2em;
  }
}

// recent article description
.recent-article-desc {
  @media (min-width: 300px) {
    width: 300px;
  }
  @media (min-width: 375px) {
    width: 350px;
  }

  @media (min-width: 400px) {
    width: 400px;
  }

  @media (min-width: 990px) {
    width: 35vw;
  }

  @media (min-width: 1400px) {
    font-size: 1.3em;
    width: 500px;
  }

  @media (min-width: 1900px) {
    font-size: 1.8em;
  }
}

.recent-article-date-time {
  font-weight: 100;

  @media (min-width: 300px) {
    width: 300px;
  }
  @media (min-width: 375px) {
    width: 350px;
  }

  @media (min-width: 400px) {
    width: 400px;
  }

  @media (min-width: 990px) {
    width: 35vw;
  }

  @media (min-width: 1400px) {
    font-size: 1.3em;
    width: 500px;
  }

  @media (min-width: 1900px) {
    font-size: 1.8em;
  }
}

//COLOR MODES
@include color-mode(dark) {
  .recent-article-title,
  .recent-article-desc,
  .recent-article-date-time {
    color: $primary-text-dark;
  }

  .recent-article-title:hover {
    text-decoration: underline;
    color: hsl(0, 0%, 85%);
  }

  .recent-article-bookmark {
    color: $bookmark-bg-dark;
  }
}

@include color-mode(light) {
  .recent-article-title,
  .recent-article-desc,
  .recent-article-date-time {
    color: $primary-text-light;
  }

  .recent-article-title:hover {
    text-decoration: underline;
    color: hsl(0, 1%, 27%);
  }

  .recent-article-date-time {
    font-weight: 200;
  }

  .recent-article-bookmark {
    color: $bookmark-bg-light;
  }
}

